# ccbuild

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  INSTALL.md  MD5SUMS  Makefile  Makefile.am  Makefile.ccbuild  Makefile.human  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  bootstrap  ccbuild.aap  configure  configure.in  construir  localinstall.sh  main.aap  mkConstruir.sh  package.sh  update_cmakelists.sh
.github/workflows/: main.yml  release.yml
doc/ccbuild/: Makefile  ccbuild.1  ccbuild.1.md  ccbuild.dvi  ccbuild.sgml  ccbuildman.html  ccbuildman.sgml
doc/debiandoc/: Makefile  ccbuild.1  ccbuild.dvi  ccbuild.sgml  ccbuildman.html  ccbuildman.sgml
src/: ccResolutions  ccbuild.cc  doxymainpage.hh  srcHeader
src/Arguments/: Arguments.cc  Arguments.hh  Arguments.ih  clear.cc  destroy.cc  flagged.cc  getInstance.cc  initialize.cc  outputOptions.cc  statics.cc  value.cc  values.cc
src/Compiler/: Compiler.hh  Compiler.ih  addArgument.cc  addObject.cc  ar.cc  cls.cc  compile.cc  compileCommand.cc  countFirstLinkerArguments.cc  lib.cc  libCommand.cc  link.cc  linkCommand.cc  operator_add.cc  precompile.cc  precompileCommand.cc  splitInto.cc  statics.cc
src/FileSystem/: FileSystem.hh  FileSystem.ih  baseName.cc  ccResolutions  cleanPath.cc  cwd.cc  directoryName.cc  ensureDirectory.cc  fileExists.cc  fileName.cc  globDirectoriesInto.cc  globFilesInto.cc  globInto.cc  globSourceFilesInto.cc  isReadable.cc  modTime.cc  newer.cc  recursiveGlobDirectoriesInto.cc  rmIfExists.cc  test.cc  touch.cc
src/Globals/: Globals.cc  Globals.hh  Globals.ih  destroy.cc  getInstance.cc  indexoperator.cc  statics.cc
src/MD5Info/: MD5Info.cc  MD5Info.hh  MD5Info.ih  contentHash.cc  destroy.cc  getInstance.cc  hashFilenameFor.cc  load.cc  old.cc  save.cc  statics.cc
src/Misc/: Misc.hh
src/Options/: Options.hh  Options.ih  statics.cc
src/Problem/: Problem.cc  Problem.hh  Problem.ih
src/Resolver/: Resolver.cc  Resolver.hh  Resolver.ih  destroy.cc  expand.cc  getInstance.cc  loadIfExists.cc  resolve.cc  resolveInto.cc  statics.cc
src/Source/: Source.cc  Source.hh  Source.ih  basename.cc  build.cc  buildBinTarget.cc  buildHeader.cc  buildObjectTarget.cc  changed.cc  dependencies.cc  directDeps.cc  directory.cc  genDeps.cc  hasSourceExtension.cc  isBinTarget.cc  isHeader.cc  isInternalHeader.cc  isLibTarget.cc  isLocalHeader.cc  isObjectTarget.cc  outputFilename.cc  producesOutput.cc  reload.cc  scan.cc  stale.cc  upToDate.cc
src/SourceScanner/: SourceScanner.cc  SourceScanner.hh  SourceScanner.ih  hasDefine.cc  hasMainFunction.cc  includes.cc  lexer  lexer.h  storeGlobal.cc  storeIgnore.cc  storeLocal.cc  yylex.cc
src/Sources/: Sources.cc  Sources.hh  Sources.ih  destroy.cc  erase.cc  getInstance.cc  indexoperator.cc  reloadStaleSources.cc  statics.cc
src/String/: String.hh  String.ih  replace.cc
src/SubProcessError/: SubProcessError.hh
src/System/: System.hh  System.ih  aapFor.cc  aapForAll.cc  addArguments.cc  build.cc  buildAll.cc  changeTo.cc  check.cc  clean.cc  collectTargets.cc  depsFor.cc  destroy.cc  distclean.cc  dotgraphFor.cc  dotgraphForAll.cc  exit.cc  icmake.cc  inspect.cc  lib.cc  localSourcesInto.cc  makefileFor.cc  makefileForAll.cc  md5.cc  parseArguments.cc  projectName.cc  resolveTest.cc  sleep.cc  statics.cc  system.cc  system.hh  system.ih  tree.cc  trim.cc  trimmed.cc  uname.cc
src/VectorRing/: VectorRing.hh  VectorRing.ih  test.cc
src/arguments/: arguments.cc  arguments.hh  arguments.ih  clear.cc  destroy.cc  flagged.cc  getInstance.cc  initialize.cc  outputOptions.cc  statics.cc  value.cc  values.cc
src/compiler/: addArgument.cc  addObject.cc  ar.cc  cls.cc  compile.cc  compileCommand.cc  compiler.hh  compiler.ih  countFirstLinkerArguments.cc  lib.cc  libCommand.cc  link.cc  linkCommand.cc  operator_add.cc  precompile.cc  precompileCommand.cc  splitInto.cc  statics.cc
src/fileSystem/: absolutePath.cc  baseName.cc  ccResolutions  cleanPath.cc  cwd.cc  directoryName.cc  fileName.cc  (+18 more)
test/: .gitignore  README  arguments.cc  argvtest.cc  attempt1.cc  ccResolutions  container_const.cc  include.cc  md5sum.cc  openmp_exceptions.cc  parsetest.cpp  pkg-config-options.sh  zeroblock_mem.cc
tools/: benchmark.sh  ccClass  ccFunction  ccbuild.css  ccbuildStatusPage.sh  distcc_hack.sh  dot2media.sh  genPkgconfigList.sh  pkg-config-options.sh  todo.sh  trueManWebpage.sh
(+178 files in other folders)
