dnl Process this file with autoconf to produce a configure script.

dnl Boilerplate
AC_INIT(ccbuild, 1.5.7)
AC_CONFIG_SRCDIR(src/ccbuild.cc)
AM_INIT_AUTOMAKE

AC_PROG_CXX


# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_HEADER_STDC
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([getcwd memset mkdir])


AM_PROG_LEX
if ! test "y$LEX" = "yflex"; then
    if ! test "y$LEX" = "ylex"; then
        AC_MSG_FAILURE([*** flex or lex required])
    fi
fi

AC_CHECK_HEADERS(wordexp.h getopt.h,,AC_MSG_ERROR([Required header file missing.]))

dnl libgcrypt
gcrypt=0
AC_MSG_CHECKING(for libgcrypt)
AM_PATH_LIBGCRYPT(1.2.0, gcrypt=1)

if test $gcrypt = 0
then
  AC_MSG_ERROR([ccbuild needs libgcrypt for the MD5 algoritm])
fi

AC_OUTPUT(Makefile)


